welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:28: error: not found: value tra
  for (compteur5 <- 1 to 3) {motif2() ; tra()}
                                        ^